--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,1 +1,7 @@
-
+html {font-family: sans-serif; text-align: center}
+body {display:inline-block; text-align: left }
+label, legend {font-weight: bold}
+*:required, .obligatorio {border: thin solid blue}
+input[type=numbre], .numero {text-align: right}
+.error {color:red}
+output {font-size: small}
